# matchbox

./: .gitignore  .gitmodules  .markdownlint.yml  Cargo.toml  Dockerfile  LICENSE  README.md  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  code.yml  lint-markdown.yml  lint-toml.yml  markdown-lint.yml  push-matchbox_server-dockerhub.yml  website.yml
bevy_matchbox/: Cargo.toml
bevy_matchbox/examples/: hello.rs  hello_host.rs  hello_signaling.rs
bevy_matchbox/src/: lib.rs  multi_channel_socket.rs  signaling.rs  socket.rs
examples/async_example/: Cargo.toml
examples/async_example/src/: main.rs
examples/bevy_ggrs/: .gitignore  Cargo.toml  README.md
examples/bevy_ggrs/.cargo/: config.toml
examples/bevy_ggrs/src/: args.rs  box_game.rs  lib.rs  main.rs
examples/custom_signaller/: Cargo.toml  README.md
examples/custom_signaller/src/: direct_message.rs  get_browser_url.rs  iroh_gossip_signaller.rs  lib.rs  main.rs
examples/error_handling/: Cargo.toml  README.md
examples/error_handling/src/: main.rs
examples/simple/: Cargo.toml  README.md
examples/simple/src/: main.rs
flecs_matchbox/: Cargo.toml  README.md
flecs_matchbox/examples/: hello.rs  hello_host.rs  hello_signaling.rs
flecs_matchbox/src/: lib.rs  signaling.rs  socket.rs
matchbox/: Cargo.toml
matchbox/src/: lib.rs
matchbox_common/: Cargo.toml
matchbox_common/src/: lib.rs
matchbox_demo/: Cargo.toml  Makefile.toml  README.md  index.html
matchbox_demo/src/: args.rs  box_game.rs  main.rs
matchbox_peer/: Cargo.toml
matchbox_peer/src/: lib.rs
matchbox_protocol/: Cargo.toml
matchbox_protocol/src/: lib.rs
matchbox_server/: Cargo.toml  Dockerfile  README.md
matchbox_server/hybrid/: lib.rs  regular_peer.rs  super_peer.rs
matchbox_server/src/: args.rs  error.rs  main.rs  signaling.rs  state.rs  topology.rs
matchbox_server_hybrid/: Cargo.toml
matchbox_server_hybrid/src/: main.rs  state.rs  topology.rs
matchbox_signaling/: Cargo.toml  testNote.md
matchbox_signaling/examples/: client_server.rs  full_mesh.rs  fullmesh.rs  server.rs  tls.rs
matchbox_signaling/examples/self-signed-certs/: cert.pem  key.pem
matchbox_signaling/src/: error.rs  lib.rs
matchbox_signaling/src/authentication/: mod.rs
matchbox_signaling/src/signaling_server/: auth.rs  builder.rs  callbacks.rs  error.rs  handlers.rs  mod.rs  server.rs  signaling.rs  state.rs
matchbox_signaling/src/topologies/: client_server.rs  full_mesh.rs  hybrid.rs  mod.rs
matchbox_signaling/tests/: client_server.rs  full_mesh.rs  hybrid.rs
matchbox_signalling_socket/: Cargo.toml
matchbox_signalling_socket/src/: error.rs  lib.rs
matchbox_signalling_socket/src/signalling_socket/: builder.rs  callbacks.rs  error.rs  handlers.rs  mod.rs  server.rs  signaling.rs  socket.rs  state.rs  topologies.rs
matchbox_signalling_socket/tests/: full_mesh.rs
matchbox_simple_demo/: Cargo.toml
matchbox_simple_demo/src/: main.rs
matchbox_socket/: Cargo.toml
matchbox_socket/examples/: connect_native.rs
matchbox_socket/src/: error.rs  ggrs_socket.rs  lib.rs
matchbox_socket/src/integrations/: bevy_plugin.rs  mod.rs
matchbox_socket/src/webrtc_socket/: channels.rs  error.rs  messages.rs  mod.rs  native.rs  signal_peer.rs  socket.rs  wasm.rs  wasm_message_loop.rs  wasm_signalling_loop.rs
matchbox_socket/src/webrtc_socket/native/: message_loop.rs  signalling_loop.rs
matchbox_socket/src/webrtc_socket/socket/: async_connection.rs
matchbox_socket/src/webrtc_socket/wasm/: message_loop.rs  signalling_loop.rs
matchbox_socket/tests/: connecting.rs
matchbox_super_client/: Cargo.toml
matchbox_super_client/src/: client.rs  main.rs
matchbox_webgl2_demo/: Cargo.toml  LICENSE
matchbox_webgl2_demo/src/: args.rs  main.rs
matchbox_webgl2_demo/src/webrtc_socket/: signal_peer.rs
signalling_server/: Cargo.toml  Dockerfile
signalling_server/src/: main.rs
website/: Cargo.toml  index.html
website/src/: main.rs
