[workspace]
members = [
    "matchbox_server",
    "matchbox_socket",
    "matchbox_demo",
    "matchbox_simple_demo",
]
resolver = "2"

[patch.crates-io]
wasm-bindgen = { git = "https://github.com/johanhelsing/wasm-bindgen", branch = "rtcpeerconnectionstate" }
web-sys = { git = "https://github.com/johanhelsing/wasm-bindgen", branch = "rtcpeerconnectionstate" }
js-sys = { git = "https://github.com/johanhelsing/wasm-bindgen", branch = "rtcpeerconnectionstate" }