[package]
name = "bevy_matchbox"
version = "0.10.0"
authors = [
  "Johan Helsing <johanhelsing@gmail.com>",
  "Garry O'Donnell <garry.euan.odonnell@ntlworld.com",
  "Spencer C. Imbleau",
]
edition = "2021"
description = "A Bevy extension for Matchbox WebRtc networking"
license = "MIT OR Apache-2.0"
keywords = ["bevy", "webrtc", "peer-to-peer", "networking", "wasm"]
categories = [
  "network-programming",
  "game-development",
  "wasm",
  "web-programming",
]
repository = "https://github.com/johanhelsing/matchbox"
homepage = "https://github.com/johanhelsing/matchbox"
readme = "../README.md"

[features]
ggrs = ["matchbox_socket/ggrs"]
signaling = [
  "dep:matchbox_signaling",
  "dep:async-compat",
  "bevy/multi_threaded",
]

[dependencies]
bevy = { version = "0.14", default-features = false }
matchbox_socket = { version = "0.10", path = "../matchbox_socket" }
cfg-if = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
matchbox_signaling = { version = "0.10", path = "../matchbox_signaling", optional = true }
async-compat = { version = "0.2", optional = true }

[dev-dependencies]
bevy = { version = "0.14", default-features = false, features = [
  "bevy_winit",
  "bevy_render",
  "bevy_pbr",
  "bevy_core_pipeline",
  "bevy_ui",
  "bevy_text",
  "bevy_asset",
  "ktx2",
  "zstd",
  "tonemapping_luts",
  "webgl2",
  # gh actions runners don't like wayland
  "x11",
] }

[[example]]
name = "hello_host"
required-features = ["signaling"]

[[example]]
name = "hello_signaling"
required-features = ["signaling"]
