[package]
name = "flecs_matchbox"
version = "0.1.0"
authors = [
  "Johan Helsing <johanhelsing@gmail.com>",
  "nomaterials <nomaterials@gmail.com>",
]
edition = "2021"
description = "A flecs integration for the matchbox WebRTC networking library"
license = "MIT OR Apache-2.0"
keywords = ["flecs", "webrtc", "peer-to-peer", "networking", "wasm"]
categories = [
  "network-programming",
  "game-development",
  "wasm",
  "web-programming",
]
repository = "https://github.com/johanhelsing/matchbox"
homepage = "https://github.com/johanhelsing/matchbox"
readme = "README.md"

[features]
default = []
signaling = ["dep:matchbox_signaling", "dep:async-compat"]

[dependencies]
flecs_ecs = "0.1.1"
matchbox_socket = { version = "0.12.0", path = "../matchbox_socket" }
cfg-if = "1.0"
futures-lite = "2.3.0"
log = "0.4.21"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
matchbox_signaling = { version = "0.12.0", path = "../matchbox_signaling", optional = true }
async-compat = { version = "0.2.2", optional = true }

[dev-dependencies]
env_logger = "0.11.3"

[[example]]
name = "hello"

[[example]]
name = "hello_host"
required-features = ["signaling"]

[[example]]
name = "hello_signaling"
required-features = ["signaling"]
