[package]
name = "matchbox_demo"
version = "0.1.0"
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
description = "A demo game where two web browser can connect and move boxes around"
edition = "2018"
repository = "https://github.com/mrk-its/bevy_webgl2_app_template"
keywords = ["gamedev", "webrtc", "peer-to-peer", "networking", "wasm"]
license = "MIT" # TODO: get permission to dual-license as Apache 2 as well

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.22", features = [
    "console", # TODO: for console::log_1
    "Document", "Location", # for getting args from query string
    "Headers", "RequestInit", "RequestMode", "Response", # TODO: only for busy wait hack
] }
js-sys = "0.3"
console_error_panic_hook = "0.1"
console_log = "0.2"
serde_qs = "0.8.4"
wasm-bindgen-futures = "0.4"
log = "0.4"
wasm-bindgen = "0.2"

[dependencies]
bevy = { version="0.5.0", default-features = false }
bevy_ggrs = { git = "https://github.com/gschup/bevy_ggrs" }
bevy_webgl2 = { git = "https://github.com/mrk-its/bevy_webgl2", branch = "master", optional = true }
clap = "3.0.0-beta.2"
futures = { version = "0.3", default-features = false }
futures-lite = "1.12"
serde = "1.0"
winit = {version = "0.25.0"}

matchbox_socket = { path = "../matchbox_socket", features = ["ggrs-socket"] }

# TODO: 0.4 doesn't is missing required patches, and 0.5 is not yet released.
ggrs = { git = "https://github.com/gschup/ggrs" }

# [profile.dev]
# opt-level = 1

# [profile.release]
# lto = true
# opt-level = 's'
