[package]
name = "matchbox_demo"
version = "0.1.0"
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
description = "A demo game where two web browser can connect and move boxes around"
edition = "2018"
repository = "https://github.com/mrk-its/bevy_webgl2_app_template"
keywords = ["gamedev", "webrtc", "peer-to-peer", "networking", "wasm"]
license = "MIT" # TODO: get permission to dual-license as Apache 2 as well

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.22", features = [
    "Document", "Location", # for getting args from query string
] }
console_error_panic_hook = "0.1"
console_log = "0.2"
serde_qs = "0.8.4"
wasm-bindgen = "0.2"

[dependencies]
matchbox_socket = { path = "../matchbox_socket", features = ["ggrs-socket"] }
bevy = { git = "https://github.com/bevyengine/bevy", branch = "main", default-features = false }
ggrs = "0.5"
bevy_ggrs = { git = "https://github.com/gschup/bevy_ggrs", branch = "main" }
bevy_webgl2 = { git = "https://github.com/mrk-its/bevy_webgl2", branch = "master", optional = true }
clap = { version = "3.0", features = ["derive"] }
serde = "1.0"
winit = {version = "0.25.0"}
log = "0.4"

# [profile.dev]
# opt-level = 1

# [profile.release]
# lto = true
# opt-level = 's'
