[package]
name = "matchbox_demo"
version = "0.2.0"
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
description = "A demo game where two web browser can connect and move boxes around"
edition = "2018"
repository = "https://github.com/johanhelsing/matchbox"
keywords = ["gamedev", "webrtc", "peer-to-peer", "networking", "wasm"]
license = "MIT OR Apache-2.0"

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3.22", features = [
    "Document", "Location", # for getting args from query string
] }
console_error_panic_hook = "0.1"
console_log = "0.2"
serde_qs = "0.10"
wasm-bindgen = "0.2"
ggrs = { version = "0.9", features = ["wasm-bindgen"] }

[dependencies]
matchbox_socket = { path = "../matchbox_socket", features = ["ggrs-socket"] }
bevy = { version = "0.8", default-features = false }
ggrs = "0.9"
bevy_ggrs = "0.10"
bytemuck = { version = "1.7", features=["derive"]}
clap = { version = "3.0", features = ["derive"] }
serde = "1.0"
winit = "0.26"
log = "0.4"

# [profile.dev]
# opt-level = 1

# [profile.release]
# lto = true
# opt-level = 's'
