[package]
name = "matchbox_peer"
version = "0.1.0"
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
description = "Painless WebRTC peer-to-peer full-mesh networking socket"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "webrtc", "peer-to-peer", "networking", "wasm"]
categories = ["network-programming", "game-development", "wasm", "web-programming"]
repository = "https://github.com/johanhelsing/matchbox"

[dependencies]
# TODO: disable default-features where possible
futures-channel = { version = "0.3", features = ["sink"] }
futures = { version = "0.3", default-features = false }
futures-util = { version = "0.3", features = ["sink"] }
serde = "1.0"
serde_json = "1.0"
uuid = { version = "0.8", default-features = false, features = ["v4"] }
ws_stream_wasm = "0.7"
wasm-bindgen-futures = "0.4"

# Web stuff, we might want to make these optional one day, if we add native support
wasm-bindgen = { version = "0.2", features = [ "serde-serialize" ] }
js-sys = { version = "0.3", features = []}
web-sys = { version = "0.3.22", features = [
    "console", # for console::log_1
    "MessageEvent",
    "RtcPeerConnection",
    "RtcSdpType", "RtcSessionDescription", "RtcSessionDescriptionInit",
    "RtcIceGatheringState",
    "RtcConfiguration", "RtcDataChannel", "RtcDataChannelInit", "RtcDataChannelType",
] }

# TODO: should be a feature instead
ggrs = { path = "../ggrs" }
bincode = "1.3" # for ggrs
