[package]
name = "matchbox_protocol"
version = "0.11.0"
authors = [
  "Johan Helsing <johanhelsing@gmail.com>",
  "Spencer C. Imbleau <spencer@imbleau.com>",
]
description = "Common interfaces between matchbox_socket and matchbox_server"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "webrtc", "peer-to-peer", "networking", "wasm"]
categories = [
  "network-programming",
  "game-development",
  "wasm",
  "web-programming",
]
repository = "https://github.com/johanhelsing/matchbox"
homepage = "https://github.com/johanhelsing/matchbox"
readme = "../README.md"

[features]
json = ["dep:serde_json"]

[dependencies]
cfg-if = "1.0"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.4", features = ["serde"] }
derive_more = { version = "1.0", features = ["display", "from"] }

# JSON feature
serde_json = { version = "1.0", default-features = false, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
uuid = { version = "1.4", features = ["js"] }
