[package]
name = "matchbox_server"
version = "0.5.0"
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
edition = "2021"
description = "A signalling server for WebRTC peer-to-peer full-mesh networking"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "webrtc", "peer-to-peer", "networking", "wasm"]
categories = ["network-programming", "game-development", "wasm", "web-programming"]
repository = "https://github.com/johanhelsing/matchbox"
homepage = "https://github.com/johanhelsing/matchbox"
readme = "../README.md"

[dependencies]
axum = { version = "0.6", features = ["ws"] }
tracing = { version = "0.1", features= ["log"] }
tracing-subscriber = { version = "0.3", features=["env-filter"] }
tower-http = { version = "0.3", features = ["cors", "trace"] }
tokio = { version = "1.10", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = { version = "0.3", default-features = false, features = ["alloc"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
clap = { version = "4.0", features = ["derive", "env"] }
thiserror = "1.0"
tokio-stream = "0.1"

[dev-dependencies]
tokio = { version = "1.10", features = ["macros", "rt-multi-thread", "time"] }
tokio-tungstenite = "0.18.0"