[package]
name = "matchbox_socket"
version = "0.1.0"
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
description = "Painless WebRTC peer-to-peer full-mesh networking socket"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "webrtc", "peer-to-peer", "networking", "wasm"]
categories = ["network-programming", "game-development", "wasm", "web-programming"]
repository = "https://github.com/johanhelsing/matchbox"

[features]
ggrs-socket = ["bincode", "ggrs"]

[dependencies]
futures-channel = { version = "0.3", features = ["sink"], default-features = false }
futures = { version = "0.3", default-features = false }
futures-util = { version = "0.3", features = ["sink"], default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false }
uuid = { version = "0.8", default-features = false, features = ["v4"] }
ws_stream_wasm = { version = "0.7", default-features = false }
wasm-bindgen-futures = { version = "0.4", default-features = false }

# Web stuff, we might want to make these optional one day, if we add native support
wasm-bindgen = { version = "0.2", features = [ "serde-serialize" ], default-features = false }
js-sys = { version = "0.3", default-features = false }
web-sys = { version = "0.3.22", default-features = false, features = [
    "MessageEvent",
    "RtcPeerConnection",
    "RtcSdpType", "RtcSessionDescription", "RtcSessionDescriptionInit",
    "RtcIceGatheringState",
    "RtcConfiguration", "RtcDataChannel", "RtcDataChannelInit", "RtcDataChannelType",
] }
log = { version = "0.4", default-features = false }

# ggrs-socket
ggrs = { version = "0.5", default-features = false, optional = true }
bincode = { version = "1.3", default-features = false, optional = true }
