[package]
name = "matchbox_socket"
version = "0.3.0"
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
description = "Painless WebRTC peer-to-peer full-mesh networking socket"
edition = "2018"
license = "MIT OR Apache-2.0"
keywords = ["gamedev", "webrtc", "peer-to-peer", "networking", "wasm"]
categories = ["network-programming", "game-development", "wasm", "web-programming"]
repository = "https://github.com/johanhelsing/matchbox"
readme = "../README.md"

[features]
ggrs-socket = ["bincode", "ggrs"]

[dependencies]
futures-channel = { version = "0.3", features = ["sink"], default-features = false }
futures = { version = "0.3", default-features = false }
futures-timer = { version = "3.0", default-features = false }
futures-util = { version = "0.3", default-features = false, features = [
    "sink", "async-await-macro", "channel"
] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
uuid = { version = "1.0", default-features = false, features = ["v4"] }
log = { version = "0.4", default-features = false }

# ggrs-socket
ggrs = { version = "0.9", default-features = false, optional = true }
bincode = { version = "1.3", default-features = false, optional = true }

[target.'cfg(target_arch = "wasm32")'.dependencies]
ws_stream_wasm = { version = "0.7", default-features = false }
wasm-bindgen-futures = { version = "0.4", default-features = false }
wasm-bindgen = { version = "0.2", features = [ "serde-serialize" ], default-features = false }
futures-timer = { version = "3.0", default-features = false, features = ["wasm-bindgen"] }
uuid = { version = "1.0", default-features = false, features = ["v4", "js"] }
js-sys = { version = "0.3", default-features = false }
web-sys = { version = "0.3.22", default-features = false, features = [
    "MessageEvent",
    "RtcPeerConnection",
    "RtcSdpType", "RtcSessionDescription", "RtcSessionDescriptionInit",
    "RtcIceGatheringState",
    "RtcConfiguration", "RtcDataChannel", "RtcDataChannelInit", "RtcDataChannelType",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
async-tungstenite = { version = "0.17", default-features = false, features = [ "async-std-runtime", "async-tls" ] }
webrtc = { version = "0.4", default-features = false }
bytes = { version = "1.1", default-features = false }
async-compat = { version = "0.2.1", default-features = false }
