[package]
name = "website"
version = "0.1.0"
authors = [
  "Johan Helsing <johanhelsing@gmail.com>",
  "Garry O'Donnell <garry.euan.odonnell@ntlworld.com>",
]
edition = "2021"
description = "A Website for Matchbox WebRtc networking"
license = "MIT OR Apache-2.0"
repository = "https://github.com/johanhelsing/matchbox"
homepage = "https://github.com/johanhelsing/matchbox"
readme = "../README.md"

[dependencies]
bevy_ggrs_example = { path = "../examples/bevy_ggrs" }
stylist = { version = "0.12.1", features = ["yew"] }
yew = { version = "0.20.0", features = ["csr"] }
