[package]
name = "bevy_ggrs_example"
version = "0.7.0"
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
description = "A demo game where two web browser can connect and move boxes around"
edition = "2021"
repository = "https://github.com/johanhelsing/matchbox"
keywords = ["gamedev", "webrtc", "peer-to-peer", "networking", "wasm"]
license = "MIT OR Apache-2.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
  "Document",
  "Location", # for getting args from query string
] }
serde_qs = "0.13"
wasm-bindgen = "0.2"
# Temp solution, I got bevy_ggrs to compile with bevy 0.15
# Should be version 0.17 eventually
bevy_ggrs = { git = "https://github.com/haihala/bevy_ggrs.git", branch = "main", features = [
  "wasm-bindgen",
] }

[dependencies]
bevy_matchbox = { path = "../../bevy_matchbox", features = ["ggrs"] }
bevy = { version = "0.15", default-features = false, features = [
  "bevy_winit",
  "bevy_render",
  "bevy_pbr",
  "bevy_core_pipeline",
  "bevy_ui",
  "bevy_text",
  "bevy_asset",
  "bevy_sprite",
  "bevy_state",
  "multi_threaded",
  "png",
  "webgl2",
  "tonemapping_luts",
  # gh actions runners don't like wayland
  "x11",
] }
# Temp solution, I got bevy_ggrs to compile with bevy 0.15
# Should be version 0.17 eventually
bevy_ggrs = { git = "https://github.com/haihala/bevy_ggrs.git", branch = "main" }
bytemuck = { version = "1.7", features = ["derive"] }
clap = { version = "4.3", features = ["derive"] }
serde = "1.0"
