[package]
name = "bevy_ggrs_example"
version = "0.7.0"
authors = ["Johan Helsing <johanhelsing@gmail.com>"]
description = "A demo game where two web browser can connect and move boxes around"
edition = "2024"
repository = "https://github.com/johanhelsing/matchbox"
keywords = ["gamedev", "webrtc", "peer-to-peer", "networking", "wasm"]
license = "MIT OR Apache-2.0"
publish = false

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "0.3", features = [
  "Document",
  "Location", # for getting args from query string
] }
serde_qs = "1.0"
wasm-bindgen = "0.2"
bevy_ggrs = { version = "0.20", features = ["wasm-bindgen"] }

[dependencies]
bevy_matchbox = { path = "../../bevy_matchbox", features = ["ggrs"] }
bevy = { version = "0.18", default-features = false, features = [
  "2d",
  "3d",
  "ui",
  "zstd_rust",
] }
bevy_ggrs = "0.20"
clap = { version = "4.3", features = ["derive"] }
serde = "1.0"
