[package]
name = "custom_signaller"
version = "0.1.0"
edition = "2021"

[dependencies]
matchbox_socket = { path = "../../matchbox_socket" }

futures-timer = { version = "3", features = ["wasm-bindgen"] }
iroh = { version = "0.34.0", default-features = false }
iroh-gossip = { version = "0.34.0", default-features = false, features = [
  "net",
] }
n0-future = { version = "0.1.2", features = [] }
uuid = { version = "1.16", features = ["v4", "rng-getrandom"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-broadcast = "0.7.2"
web-time = "1.1.0"
js-sys = "0.3.77"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing = { version = "0.1" }


[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0"
futures = { version = "0.3", default-features = false }
wasm-bindgen-futures = "0.4.29"
tokio = { version = "1.32", default-features = false, features = [
  "time",
  "sync",
] }
getrandom = { version = "0.3", features = ["wasm_js"] }
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["Window", "Location"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
futures = "0.3"
tokio = "1.32"
